# TMD-backup

./: .gitignore  README.md  cz.bash  params.dat.txt  setup.bash
AAKTXZ2023/: README  column.f  (+39 more)
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/: .nfs807c304d017943c100000142  .nfs807c304e01997ca700000197  .nfs807c304e01cf581c00002fe8  .nfs807c304e01db681d00003463  .nfs807c304f015df9f3000000e5  .nfs807c304f01a19e1800000289  .nfs807c30520167ba160000000b  LICENCE  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  core.256331  libtool  makelibs
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/BAT/: bat00p01.plt  bat00p02.plt  bat01p01.plt  bat02p01.plt  bat02p02.plt  bat02p03.plt  bat02p04.plt  bat02p05.plt  bat03p01.plt  bat03p02.plt  bat04p01.plt  bat04p02.plt  batune00.f  batune01.f  batune02.f  batune03.f  batune04.f
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/CxxHead/: Makefile  Makefile.am  Makefile.in
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/CxxHead/QCDNUM/: FortranWrappers.h  FortranWrappers.h.in  Makefile  Makefile.am  Makefile.in  QCDNUM.h  QCDNUMfw.h  stamp-h1
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/CxxWrap/: Makefile  Makefile.am  Makefile.in  hqstf.cc  hqstf.lo  libQCDNUMCCWrap.la  mbutil.cc  mbutil.lo  qcdnum.cc  qcdnum.lo  splint.cc  splint.lo  wstore.cc  wstore.lo  zmstf.cc  zmstf.lo
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/CxxWrap/.deps/: hqstf.Plo  mbutil.Plo  qcdnum.Plo  splint.Plo  wstore.Plo  zmstf.Plo
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/CxxWrap/.libs/: libQCDNUMCCWrap.la
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/confADRWOV/: defines.awk  subs1.awk
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/dcards/: convolit.dcards  example.dcards  longlist.dcards
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/hqstf/: Makefile  Makefile.am  Makefile.in  libhqstf.la  makelib
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/hqstf/.libs/: libhqstf.la
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/hqstf/cij/: asymp.f  asymp.lo  born.f  born.lo  cdfuncs.f_qcdnum16  gcorrl.f  gcorrl.lo  gcorrt.f  gcorrt.lo  locate.f  locate.lo  qchfun.f  qchfun.lo  qcorrl.f  qcorrl.lo  qcorrt.f  qcorrt.lo  thresh.f  thresh.lo
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/lib/: Makefile  Makefile.am  Makefile.in  libQCDNUM.la
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/mbutil/: Makefile  Makefile.am  Makefile.in  README  libmbutil.la  makelib
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/qcdnum/: Makefile  Makefile.am  Makefile.in  libqcdnum.la  makelib
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/run/: new_H.csv  runlocal  runtest
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/splint/: Makefile  Makefile.am  Makefile.in  libsplint.la  makelib
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/sub/: conftest.
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/testjobs/: README  convolit.cc  convolit.f  convolit.txt  example.cc  example.f  example_FF.f  exampledc.f  exampledc.txt  ftwo.cc  ftwo.f  ftwo.txt  getgluon.cc  getgluon.f  getgluon.txt  inputpdfCxx.h  longlist.f  longlist.txt  new.f  pdfsets.cc  pdfsets.txt  sgevolution.f  sgevolution.txt  testhqstf.cc  testhqstf.f  testhqstf.txt  testsgns.cc  testsgns.f  testsgns.txt  testzmstf.cc  testzmstf.f  testzmstf.txt  timing.cc  timing.f  timing.txt  wspace.cc  wspace.f  wspace.txt
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/weights/: timelike.wgt  unpolarised.wgt
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/wstore/: Makefile  Makefile.am  Makefile.in  libwstore.la  makelib
AAKTXZ2023/QCDNUM/qcdnum-18-00-00/zmstf/: Makefile  Makefile.am  Makefile.in  libzmstf.la  makelib
(+11578 files in other folders)
